[package]
name = "tx-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.86"
dotenv = "0.15.0"
google-cloud-storage = "0.20.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
borsh = "1.5.1"

near-indexer-primitives = "0.24.0"

near-indexer-primitives-0-20-1 = { version = "0.20.1", package = "near-indexer-primitives" }
near-indexer-primitives-0-21-2 = { version = "0.21.2", package = "near-indexer-primitives" }
near-indexer-primitives-0-22-0 = { version = "0.22.0", package = "near-indexer-primitives" }
near-indexer-primitives-0-23-0 = { version = "0.23.0", package = "near-indexer-primitives" }
